--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="hero-img">
-            <img src="/priyanka.jpg" alt="My Pic"/>
+            <img src="Image/priyanka.jpg" alt="My Pic"/>
         </div>
     </div>
 
@@ -54,7 +54,7 @@
         <div class="hero2">
             <article>
                 <h1>About<span>  Me</span></h1>
-                <img src="/priyanka.jpg">
+                <img src="/Image/priyanka.jpg">
                 <p>
                     I'm Priyanka Mishra from Lucknow, Uttar Pradesh. I completed my Bachelor of Arts degree in 2024 from Lucknow University.<br> After finishing my first year of graduation, I joined the Navgurukul Foundation for Social Welfare, where I pursued a software development course.<br> Through Navgurukul, I also joined Hyperverge Academy, where I learned web development. 
                     I have technical skills in HTML, CSS, JavaScript, <br>basic SQL, basic Excel, GitHub, and Git.
@@ -217,7 +217,7 @@
     <h1 class="title-Project">My <span>Projects</span></h1>
     <div class="main-pro">
         <div class="project1">
-            <img src="/images2.jpeg">
+            <img src="/Image/images2.jpeg">
             <div class="content">
                 <h2> Trivia Game</h2>
                 <h4>Use SKills: <span>HTML, CSS ,JavaScript</span></h4>
@@ -227,7 +227,7 @@
         </div>
 
         <div class="project1">
-            <img src="/images1.jpeg">
+            <img src="/Image/images1.jpeg">
             <div class="content">
                 <h2> Weather App</h2>
                 <h4>Use SKills: <span>HTML, CSS ,JavaScript</span></h4>
@@ -237,7 +237,7 @@
         </div>
 
         <div class="project1">
-            <img src="/clock.jpeg">
+            <img src="/Image/clock.jpeg">
             <div class="content">
                 <h2>Tic-Tac-Toe</h2>
                 <h4>Use SKills: <span>HTML, CSS ,JavaScript</span></h4>
@@ -248,7 +248,7 @@
         </div>
 
         <div class="project1">
-            <img src="/1.jpeg">
+            <img src="/Image/1.jpeg">
             <div class="content">
                 <h2> Calculator</h2>
                 <h4>Use SKills: <span>HTML, CSS ,JavaScript</span></h4>
